--- a/.github/workflows/docker-cd.yml
+++ b/.github/workflows/docker-cd.yml
@@ -1,29 +1,31 @@
+# Workflow này sẽ tự động build và đẩy image Docker lên Docker Hub khi có code mới được push lên nhánh "main".
+
 name: Build and Push to Docker Hub
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]  # Kích hoạt workflow khi có push lên nhánh main
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Chạy trên môi trường Ubuntu mới nhất
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # Lấy mã nguồn từ repository
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3  # Thiết lập Docker Buildx để build image đa nền tảng
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v3
+        uses: docker/login-action@v3  # Đăng nhập vào Docker Hub
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}  # Sử dụng biến môi trường bí mật cho username
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Sử dụng biến môi trường bí mật cho password
 
       - name: Build and Push Docker image
-        uses: docker/build-push-action@v6
+        uses: docker/build-push-action@v6  # Build và push image lên Docker Hub
         with:
-          context: .
-          push: true
-          tags: nguyenphuongtra24/flask-ci-cd-demo:latest
+          context: .  # Thư mục context là thư mục gốc của repo
+          push: true  # Đẩy image lên registry
+          tags: nguyenphuongtra24/flask-ci-cd-demo:latest  # Tag của image trên Docker Hub
