--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -2,35 +2,34 @@ name: Python CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main" ]           # Kích hoạt khi có push lên nhánh main
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]           # Kích hoạt khi có pull request vào nhánh main
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest         # Chạy trên môi trường Ubuntu mới nhất
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2  # Lấy mã nguồn từ repository
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v2  # Thiết lập môi trường Python
         with:
-          python-version: '3.10'
+          python-version: '3.10'       # Sử dụng Python 3.10
 
       - name: Install dependencies
         run: |
-          pip install pytest coverage flake8 pylint
+          pip install pytest coverage flake8 pylint  # Cài đặt các thư viện cần thiết
 
       - name: Lint with flake8
-        run: flake8 . --max-line-length=100
+        run: flake8 . --max-line-length=100         # Kiểm tra style code với flake8
 
       - name: Lint with pylint
-        run: pylint app.py test_app.py
+        run: pylint app.py test_app.py              # Kiểm tra chất lượng code với pylint
 
       - name: Run tests with coverage
         run: |
-          coverage run -m pytest
-          coverage report
-
+          coverage run -m pytest                    # Chạy test với coverage để đo độ bao phủ mã nguồn
+          coverage report                           # Xuất báo cáo coverage
